<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="delete">Delete</string>
     <string name="hint">Search Country</string>
    <string name="menu_settings">Settings</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="app_name">Mẹo Vặt Cuộc Sống</string>
    <string name="hello_world">Hello world!</string>
    <string name="row1">Sức khỏe</string>
    <string name="row21">Ẩm Thực</string>
    <string name="row22">Thức Uống</string>
    <string name="row23">Chăm sóc sắc đẹp</string>
    <string name="row31">Lịch sử</string>
    <string name="row32">Yêu thích</string>
    <string name="row51">Đồ dùng gia đình</string>
    <string name="row52">Đồ điện gia dụng</string>
    <string name="row61">Vệ sinh gia đình</string>
    <string name="row62">Công Nghệ</string>
    <string name="row7">Phụ Kiện</string>
    <string name="row81">Chăm sóc cá cảnh</string>
    <string name="row82">Góp ý</string>
    <string name="row83">Giới thiệu</string>
    <string name="btnFavorites">Favorites</string>
    <string name="contentDescription">Image</string>
    <string name="title_activity_main">Mẹo Vặt Cuộc Sống</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_gopy">Góp Ý Người Dùng</string>
    <string name="title_activity_yeu_thich">Mục Yêu Thích</string>
    <string name="title_activity_gioithieu">Giới Thiệu</string>

</resources>
